--- a/package.json
+++ b/package.json
@@ -4,26 +4,35 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "format": "prettier --write ./src",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "test": "jest --watchAll"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "~51.0.28",
+    "@expo/vector-icons": "^14.0.2",
+    "expo": "~51.0.31",
+    "expo-build-properties": "~0.12.5",
+    "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
+    "expo-navigation-bar": "^3.0.7",
     "expo-router": "~3.5.23",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-uuid": "^2.0.2",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -33,9 +42,10 @@
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
-    "jest-expo": "^51.0.3",
+    "jest-expo": "^51.0.4",
     "prettier": "^3.3.3",
     "typescript": "5.3.3"
   },
